# ksudoku

./: .arcconfig  .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Messages.sh  README  TODO  TODOPORT  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
doc/en/: CMakeLists.txt
engine/: CMakeLists.txt  choiceitem.cpp  choiceitem.h  constraint.cpp  constraint.h  constrainthelperstorage.cpp  constrainthelperstorage.h  eliminationstorage.cpp  eliminationstorage.h  item.cpp  item.h  markerstorage.cpp  markerstorage.h  mocs.cpp  problem.cpp  problem.h  ruleset.cpp  ruleset.h  solver.cpp  solver.h  statearray.cpp  statearray.h  storage.cpp  storage.h  sudokuconstraint.cpp  sudokuconstraint.h
engine/script/: CMakeLists.txt  boardclass.cpp  boardclass.h  boardprototype.cpp  boardprototype.h  boardwrapper.cpp  boardwrapper.h  itemclass.cpp  itemclass.h  itemprototype.cpp  itemprototype.h  itemwrapper.cpp  itemwrapper.h  mocs.cpp  objectmanager.cpp  objectmanager.h  scriptedruleset.cpp  scriptedruleset.h
po/ar/: ksudoku.po
po/ast/: ksudoku.po
po/be/: ksudoku.po
po/bg/: ksudoku.po
po/bs/: ksudoku.po
po/ca/: ksudoku.po
po/ca/docs/ksudoku/: index.docbook
po/ca@valencia/: ksudoku.po
po/cs/: ksudoku.po
po/da/: ksudoku.po
po/de/: ksudoku.po
po/de/docs/ksudoku/: index.docbook
po/el/: ksudoku.po
po/en_GB/: ksudoku.po
po/eo/: ksudoku.po
po/es/: ksudoku.po
po/es/docs/ksudoku/: index.docbook
po/et/: ksudoku.po
po/et/docs/ksudoku/: index.docbook
po/eu/: ksudoku.po
po/fa/: ksudoku.po
po/fi/: ksudoku.po
po/fr/: ksudoku.po
po/fr/docs/ksudoku/: index.docbook
po/ga/: ksudoku.po
po/gl/: ksudoku.po
po/gl/docs/ksudoku/: index.docbook
po/he/: ksudoku.po
po/hi/: ksudoku.po
po/hne/: ksudoku.po
po/hr/: ksudoku.po
po/hu/: ksudoku.po
po/id/: ksudoku.po
po/is/: ksudoku.po
po/it/: ksudoku.po
po/it/docs/ksudoku/: index.docbook
po/ja/: ksudoku.po
po/ka/: ksudoku.po
po/kk/: ksudoku.po
po/km/: ksudoku.po
po/ko/: ksudoku.po
po/lt/: ksudoku.po
po/lv/: ksudoku.po
po/mai/: ksudoku.po
po/ml/: ksudoku.po
po/mr/: ksudoku.po
po/nb/: ksudoku.po
po/nds/: ksudoku.po
po/nl/: ksudoku.po
po/nl/docs/ksudoku/: index.docbook
po/nn/: ksudoku.po
po/oc/: ksudoku.po
po/pa/: ksudoku.po
po/pl/: ksudoku.po
po/pt/: ksudoku.po
po/pt/docs/ksudoku/: index.docbook
po/pt_BR/: ksudoku.po
po/pt_BR/docs/ksudoku/: index.docbook
po/ro/: ksudoku.po
po/ru/: ksudoku.po
po/ru/docs/ksudoku/: index.docbook
po/sa/: ksudoku.po
po/se/: ksudoku.po
po/si/: ksudoku.po
po/sk/: ksudoku.po
po/sl/: ksudoku.po
po/sl/docs/ksudoku/: index.docbook
po/sr/: ksudoku.po
po/sr@ijekavian/: ksudoku.po
po/sr@ijekavianlatin/: ksudoku.po
po/sr@latin/: ksudoku.po
po/sv/: ksudoku.po
po/sv/docs/ksudoku/: index.docbook
po/th/: ksudoku.po
po/tr/: ksudoku.po
po/ug/: ksudoku.po
po/uk/: ksudoku.po
po/uk/docs/ksudoku/: index.docbook
po/zh_CN/: ksudoku.po
po/zh_TW/: ksudoku.po
src/: Background.qrc  CMakeLists.txt  JigSaw.txt  README  XSudoku.txt  globals.h  ksudoku.lsm  ksudoku.qrc  ksudoku_types.h  main.cpp  test_custompuzzle.tar  test_custompuzzle.txt
src/generator/: CMakeLists.txt  cagegenerator.cpp  cagegenerator.h  debug.h  dlxsolver.cpp  dlxsolver.h  mathdokugenerator.cpp  mathdokugenerator.h  plainsudokuboard.cpp  plainsudokuboard.h  roxdokuboard.cpp  roxdokuboard.h  samuraiboard.cpp  samuraiboard.h  state.cpp  state.h  sudokuboard.cpp  sudokuboard.h
src/gui/: CMakeLists-enable-export.txt  CMakeLists.txt  config.cpp  config.h  configgame.ui  gameopt.cpp  gameopt.h  gameseldlg.cpp  gameseldlg.h  gamevariants.cpp  gamevariants.h  history.cpp  history.h  ksudoku.appdata.xml  ksudoku.cpp  ksudoku.desktop  ksudoku.h  ksudoku.kcfg  ksudoku_client.cpp  ksudokugame.cpp  ksudokugame.h  ksudokuui.rc  org.kde.ksudoku.appdata.xml  org.kde.ksudoku.desktop  puzzleprinter.cpp  puzzleprinter.h  serializer.cpp  serializer.h  settings.kcfgc  symbols.cpp  symbols.h  welcomescreen.cpp  welcomescreen.h  welcomescreen.ui
src/gui/export/: CMakeLists.txt  exportdlg.cpp  exportdlg.h  exportdlgbase.ui  exportdlgbase.ui.h  exportdlgsettings.cpp  exportdlgsettings.h  exportpreview.cpp  exportpreview.h  exportpuzzles.cpp  exportpuzzles.h  generateevent.cpp  generateevent.h  pagesize.cpp  pagesize.h  print.cpp  print.h  printdialogpage.cpp  printdialogpage.h  printdialogpagedlg.ui  printdialogpagedlg.ui.h
src/gui/export/draw/: CMakeLists.txt  drawbase.cpp  drawbase.h  drawfactory.cpp  drawfactory.h  roxdokudraw.cpp  roxdokudraw.h  sudokudraw.cpp  sudokudraw.h
src/gui/views/: ArcBall.cpp  ArcBall.h  CMakeLists.txt  gameactions.cpp  gameactions.h  ksudokuiface.h  ksudokuview.cpp  ksudokuview.h  ksview.cpp  ksview.h  qsudokubutton.cpp  qsudokubutton.h  renderer.cpp  renderer.h  roxdokuview.cpp  roxdokuview.h  sudokuview.cpp  sudokuview.h  valuelistwidget.cpp  valuelistwidget.h  view2d.cpp  view2d.h
src/logic/: CMakeLists.txt  grouplookup.h  puzzle.cpp  puzzle.h  puzzlefactory.cpp  puzzlefactory.h  skbase.cpp  skbase.h  skgraph.cpp  skgraph.h  skpuzzle.cpp  skpuzzle.h  sksolver.cpp  sksolver.h  solver.cpp  solver.h  solverstate.cpp  solverstate.h  sudoku_solver.h
src/shapes/: 4x4.desktop  4x4.tar  4x4.xml  6x6.desktop  6x6.xml  Aztec.desktop  Aztec.xml  CMakeLists.txt  DoubleRoxdoku.desktop  DoubleRoxdoku.xml  Jigsaw.desktop  Jigsaw.tar  Jigsaw.xml  Killer_4x4.desktop  Killer_4x4.xml  Killer_9x9.desktop  Killer_9x9.xml  Mathdoku_4x4.desktop  Mathdoku_4x4.xml  Mathdoku_Settable.desktop  Mathdoku_Settable.xml  Nonomino.desktop  Nonomino.xml  Pentomino.desktop  Pentomino.xml  RoxdokuTwin.desktop  RoxdokuTwin.xml  Samurai.desktop  Samurai.tar  Samurai.xml  SamuraiRoxdoku.desktop  SamuraiRoxdoku.xml  Sohei.desktop  Sohei.xml  Tetromino.desktop  Tetromino.xml  TinySamurai.desktop  TinySamurai.xml  Windmill.desktop  Windmill.xml  (+18 more)
src/themes/: CMakeLists.txt  abstraction.desktop  default.desktop  default_old.desktop  ksudoku_egyptian.desktop  ksudoku_sample.desktop  ksudoku_scrible.desktop
