install( FILES
	4x4.desktop 4x4.xml
	Tetromino.desktop Tetromino.xml
	Pentomino.desktop Pentomino.xml
	6x6.desktop 6x6.xml
	Jigsaw.desktop Jigsaw.xml
	Samurai.desktop Samurai.xml
	TinySamurai.desktop TinySamurai.xml
	XSudoku.desktop XSudoku.xml
	Aztec.desktop Aztec.xml
	Nonomino.desktop Nonomino.xml
	Sohei.desktop Sohei.xml
	Windmill.desktop Windmill.xml
	DoubleRoxdoku.desktop DoubleRoxdoku.xml
	RoxdokuTwin.desktop RoxdokuTwin.xml
	SamuraiRoxdoku.desktop SamuraiRoxdoku.xml
	Mathdoku_4x4.desktop Mathdoku_4x4.xml
	Mathdoku_Settable.desktop Mathdoku_Settable.xml
	Killer_4x4.desktop Killer_4x4.xml
	Killer_9x9.desktop Killer_9x9.xml
	DESTINATION  ${KDE_INSTALL_DATADIR}/ksudoku
)

ecm_install_icons(ICONS
    128-actions-ksudoku-jigsaw.png
    128-actions-ksudoku-ksudoku_16x16.png
    128-actions-ksudoku-ksudoku_25x25.png
    128-actions-ksudoku-ksudoku_4x4.png
    128-actions-ksudoku-ksudoku_9x9.png
    128-actions-ksudoku-roxdoku_3x3x3.png
    128-actions-ksudoku-roxdoku_4x4x4.png
    128-actions-ksudoku-roxdoku_5x5x5.png
    128-actions-ksudoku-samurai.png
    128-actions-ksudoku-tiny_samurai.png
    128-actions-ksudoku-xsudoku.png
    128-actions-ksudoku.png
    16-actions-ksudoku-jigsaw.png
    16-actions-ksudoku-ksudoku_16x16.png
    16-actions-ksudoku-ksudoku_25x25.png
    16-actions-ksudoku-ksudoku_4x4.png
    16-actions-ksudoku-ksudoku_9x9.png
    16-actions-ksudoku-roxdoku_3x3x3.png
    16-actions-ksudoku-roxdoku_4x4x4.png
    16-actions-ksudoku-roxdoku_5x5x5.png
    16-actions-ksudoku-samurai.png
    16-actions-ksudoku-tiny_samurai.png
    16-actions-ksudoku-xsudoku.png
    16-actions-ksudoku.png
    22-actions-ksudoku-jigsaw.png
    22-actions-ksudoku-ksudoku_16x16.png
    22-actions-ksudoku-ksudoku_25x25.png
    22-actions-ksudoku-ksudoku_4x4.png
    22-actions-ksudoku-ksudoku_9x9.png
    22-actions-ksudoku-roxdoku_3x3x3.png
    22-actions-ksudoku-roxdoku_4x4x4.png
    22-actions-ksudoku-roxdoku_5x5x5.png
    22-actions-ksudoku-samurai.png
    22-actions-ksudoku-tiny_samurai.png
    22-actions-ksudoku-xsudoku.png
    22-actions-ksudoku.png
    32-actions-ksudoku-jigsaw.png
    32-actions-ksudoku-ksudoku_16x16.png
    32-actions-ksudoku-ksudoku_25x25.png
    32-actions-ksudoku-ksudoku_4x4.png
    32-actions-ksudoku-ksudoku_9x9.png
    32-actions-ksudoku-roxdoku_3x3x3.png
    32-actions-ksudoku-roxdoku_4x4x4.png
    32-actions-ksudoku-roxdoku_5x5x5.png
    32-actions-ksudoku-samurai.png
    32-actions-ksudoku-tiny_samurai.png
    32-actions-ksudoku-xsudoku.png
    32-actions-ksudoku.png
    48-actions-ksudoku-jigsaw.png
    48-actions-ksudoku-ksudoku_16x16.png
    48-actions-ksudoku-ksudoku_25x25.png
    48-actions-ksudoku-ksudoku_4x4.png
    48-actions-ksudoku-ksudoku_9x9.png
    48-actions-ksudoku-roxdoku_3x3x3.png
    48-actions-ksudoku-roxdoku_4x4x4.png
    48-actions-ksudoku-roxdoku_5x5x5.png
    48-actions-ksudoku-samurai.png
    48-actions-ksudoku-tiny_samurai.png
    48-actions-ksudoku-xsudoku.png
    48-actions-ksudoku.png
    64-actions-ksudoku-jigsaw.png
    64-actions-ksudoku-ksudoku_16x16.png
    64-actions-ksudoku-ksudoku_25x25.png
    64-actions-ksudoku-ksudoku_4x4.png
    64-actions-ksudoku-ksudoku_9x9.png
    64-actions-ksudoku-roxdoku_3x3x3.png
    64-actions-ksudoku-roxdoku_4x4x4.png
    64-actions-ksudoku-roxdoku_5x5x5.png
    64-actions-ksudoku-samurai.png
    64-actions-ksudoku-tiny_samurai.png
    64-actions-ksudoku-xsudoku.png
    64-actions-ksudoku.png
    DESTINATION ${KDE_INSTALL_DATADIR}/ksudoku/icons
    THEME hicolor
)
